tools/src/kconfig/zconf.output
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 10 shift/reduce
State 56 conflicts: 12 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 13 shift/reduce
State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input block

    3 block: common_block
    4      | choice_stmt
    5      | menu_stmt
    6      | T_MAINMENU prompt nl_or_eof
    7      | T_ENDMENU
    8      | T_ENDIF
    9      | T_ENDCHOICE
   10      | error nl_or_eof

   11 common_block: if_stmt
   12             | comment_stmt
   13             | config_stmt
   14             | menuconfig_stmt
   15             | source_stmt
   16             | nl_or_eof

   17 config_entry_start: T_CONFIG T_WORD T_EOL

   18 config_stmt: config_entry_start config_option_list

   19 menuconfig_entry_start: T_MENUCONFIG T_WORD T_EOL

   20 menuconfig_stmt: menuconfig_entry_start config_option_list

   21 config_option_list: %empty
   22                   | config_option_list config_option
   23                   | config_option_list depends
   24                   | config_option_list help
   25                   | config_option_list T_EOL

   26 config_option: T_TRISTATE prompt_stmt_opt T_EOL
   27              | T_DEF_TRISTATE expr if_expr T_EOL
   28              | T_BOOLEAN prompt_stmt_opt T_EOL
   29              | T_DEF_BOOLEAN expr if_expr T_EOL
   30              | T_INT prompt_stmt_opt T_EOL
   31              | T_HEX prompt_stmt_opt T_EOL
   32              | T_STRING prompt_stmt_opt T_EOL
   33              | T_PROMPT prompt if_expr T_EOL
   34              | T_DEFAULT expr if_expr T_EOL
   35              | T_SELECT T_WORD if_expr T_EOL
   36              | T_RANGE symbol symbol if_expr T_EOL

   37 choice: T_CHOICE T_EOL

   38 choice_entry: choice choice_option_list

   39 choice_end: end

   40 choice_stmt: choice_entry choice_block choice_end
   41            | choice_entry choice_block

   42 choice_option_list: %empty
   43                   | choice_option_list choice_option
   44                   | choice_option_list depends
   45                   | choice_option_list help
   46                   | choice_option_list T_EOL

   47 choice_option: T_PROMPT prompt if_expr T_EOL
   48              | T_TRISTATE prompt_stmt_opt T_EOL
   49              | T_BOOLEAN prompt_stmt_opt T_EOL
   50              | T_OPTIONAL T_EOL
   51              | T_DEFAULT T_WORD if_expr T_EOL

   52 choice_block: %empty
   53             | choice_block common_block

   54 if: T_IF expr T_EOL

   55 if_end: end

   56 if_stmt: if if_block if_end
   57        | if if_block

   58 if_block: %empty
   59         | if_block common_block
   60         | if_block menu_stmt
   61         | if_block choice_stmt

   62 menu: T_MENU prompt T_EOL

   63 menu_entry: menu depends_list

   64 menu_end: end

   65 menu_stmt: menu_entry menu_block menu_end
   66          | menu_entry menu_block

   67 menu_block: %empty
   68           | menu_block common_block
   69           | menu_block menu_stmt
   70           | menu_block choice_stmt
   71           | menu_block error T_EOL

   72 source: T_SOURCE prompt T_EOL

   73 source_stmt: source

   74 comment: T_COMMENT prompt T_EOL

   75 comment_stmt: comment depends_list

   76 help_start: T_HELP T_EOL

   77 help: help_start T_HELPTEXT

   78 depends_list: %empty
   79             | depends_list depends
   80             | depends_list T_EOL

   81 depends: T_DEPENDS T_ON expr T_EOL
   82        | T_DEPENDS expr T_EOL
   83        | T_REQUIRES expr T_EOL

   84 prompt_stmt_opt: %empty
   85                | prompt if_expr

   86 prompt: T_WORD
   87       | T_WORD_QUOTE

   88 end: T_ENDMENU nl_or_eof
   89    | T_ENDCHOICE nl_or_eof
   90    | T_ENDIF nl_or_eof

   91 nl_or_eof: T_EOL
   92          | T_EOF

   93 if_expr: %empty
   94        | T_IF expr

   95 expr: symbol
   96     | symbol T_EQUAL symbol
   97     | symbol T_UNEQUAL symbol
   98     | T_OPEN_PAREN expr T_CLOSE_PAREN
   99     | T_NOT expr
  100     | expr T_OR expr
  101     | expr T_AND expr

  102 symbol: T_WORD
  103       | T_WORD_QUOTE


Terminals, with rules where they appear

$end (0) 0
error (256) 10 71
T_MAINMENU (258) 6
T_MENU (259) 62
T_ENDMENU (260) 7 88
T_SOURCE (261) 72
T_CHOICE (262) 37
T_ENDCHOICE (263) 9 89
T_COMMENT (264) 74
T_CONFIG (265) 17
T_MENUCONFIG (266) 19
T_HELP (267) 76
T_HELPTEXT (268) 77
T_IF (269) 54 94
T_ENDIF (270) 8 90
T_DEPENDS (271) 81 82
T_REQUIRES (272) 83
T_OPTIONAL (273) 50
T_PROMPT (274) 33 47
T_DEFAULT (275) 34 51
T_TRISTATE (276) 26 48
T_DEF_TRISTATE (277) 27
T_BOOLEAN (278) 28 49
T_DEF_BOOLEAN (279) 29
T_STRING (280) 32
T_INT (281) 30
T_HEX (282) 31
T_WORD (283) 17 19 35 51 86 102
T_WORD_QUOTE (284) 87 103
T_UNEQUAL (285) 97
T_EOF (286) 92
T_EOL (287) 17 19 25 26 27 28 29 30 31 32 33 34 35 36 37 46 47 48 49
    50 51 54 62 71 72 74 76 80 81 82 83 91
T_CLOSE_PAREN (288) 98
T_OPEN_PAREN (289) 98
T_ON (290) 81
T_SELECT (291) 35
T_RANGE (292) 36
T_OR (293) 100
T_AND (294) 101
T_EQUAL (295) 96
T_NOT (296) 99


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
input (43)
    on left: 1 2, on right: 0 2
block (44)
    on left: 3 4 5 6 7 8 9 10, on right: 2
common_block (45)
    on left: 11 12 13 14 15 16, on right: 3 53 59 68
config_entry_start (46)
    on left: 17, on right: 18
config_stmt (47)
    on left: 18, on right: 13
menuconfig_entry_start (48)
    on left: 19, on right: 20
menuconfig_stmt (49)
    on left: 20, on right: 14
config_option_list (50)
    on left: 21 22 23 24 25, on right: 18 20 22 23 24 25
config_option (51)
    on left: 26 27 28 29 30 31 32 33 34 35 36, on right: 22
choice (52)
    on left: 37, on right: 38
choice_entry (53)
    on left: 38, on right: 40 41
choice_end (54)
    on left: 39, on right: 40
choice_stmt (55)
    on left: 40 41, on right: 4 61 70
choice_option_list (56)
    on left: 42 43 44 45 46, on right: 38 43 44 45 46
choice_option (57)
    on left: 47 48 49 50 51, on right: 43
choice_block (58)
    on left: 52 53, on right: 40 41 53
if (59)
    on left: 54, on right: 56 57
if_end (60)
    on left: 55, on right: 56
if_stmt (61)
    on left: 56 57, on right: 11
if_block (62)
    on left: 58 59 60 61, on right: 56 57 59 60 61
menu (63)
    on left: 62, on right: 63
menu_entry (64)
    on left: 63, on right: 65 66
menu_end (65)
    on left: 64, on right: 65
menu_stmt (66)
    on left: 65 66, on right: 5 60 69
menu_block (67)
    on left: 67 68 69 70 71, on right: 65 66 68 69 70 71
source (68)
    on left: 72, on right: 73
source_stmt (69)
    on left: 73, on right: 15
comment (70)
    on left: 74, on right: 75
comment_stmt (71)
    on left: 75, on right: 12
help_start (72)
    on left: 76, on right: 77
help (73)
    on left: 77, on right: 24 45
depends_list (74)
    on left: 78 79 80, on right: 63 75 79 80
depends (75)
    on left: 81 82 83, on right: 23 44 79
prompt_stmt_opt (76)
    on left: 84 85, on right: 26 28 30 31 32 48 49
prompt (77)
    on left: 86 87, on right: 6 33 47 62 72 74 85
end (78)
    on left: 88 89 90, on right: 39 55 64
nl_or_eof (79)
    on left: 91 92, on right: 6 10 16 88 89 90
if_expr (80)
    on left: 93 94, on right: 27 29 33 34 35 36 47 51 85
expr (81)
    on left: 95 96 97 98 99 100 101, on right: 27 29 34 54 81 82 83
    94 98 99 100 101
symbol (82)
    on left: 102 103, on right: 36 95 96 97


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . block

    $end          shift, and go to state 2
    error         shift, and go to state 3
    T_MAINMENU    shift, and go to state 4
    T_MENU        shift, and go to state 5
    T_ENDMENU     shift, and go to state 6
    T_SOURCE      shift, and go to state 7
    T_CHOICE      shift, and go to state 8
    T_ENDCHOICE   shift, and go to state 9
    T_COMMENT     shift, and go to state 10
    T_CONFIG      shift, and go to state 11
    T_MENUCONFIG  shift, and go to state 12
    T_IF          shift, and go to state 13
    T_ENDIF       shift, and go to state 14
    T_EOF         shift, and go to state 15
    T_EOL         shift, and go to state 16

    block                   go to state 17
    common_block            go to state 18
    config_entry_start      go to state 19
    config_stmt             go to state 20
    menuconfig_entry_start  go to state 21
    menuconfig_stmt         go to state 22
    choice                  go to state 23
    choice_entry            go to state 24
    choice_stmt             go to state 25
    if                      go to state 26
    if_stmt                 go to state 27
    menu                    go to state 28
    menu_entry              go to state 29
    menu_stmt               go to state 30
    source                  go to state 31
    source_stmt             go to state 32
    comment                 go to state 33
    comment_stmt            go to state 34
    nl_or_eof               go to state 35


State 2

    0 $accept: input $end .

    $default  accept


State 3

   10 block: error . nl_or_eof

    T_EOF  shift, and go to state 15
    T_EOL  shift, and go to state 16

    nl_or_eof  go to state 36


State 4

    6 block: T_MAINMENU . prompt nl_or_eof

    T_WORD        shift, and go to state 37
    T_WORD_QUOTE  shift, and go to state 38

    prompt  go to state 39


State 5

   62 menu: T_MENU . prompt T_EOL

    T_WORD        shift, and go to state 37
    T_WORD_QUOTE  shift, and go to state 38

    prompt  go to state 40


State 6

    7 block: T_ENDMENU .

    $default  reduce using rule 7 (block)


State 7

   72 source: T_SOURCE . prompt T_EOL

    T_WORD        shift, and go to state 37
    T_WORD_QUOTE  shift, and go to state 38

    prompt  go to state 41


State 8

   37 choice: T_CHOICE . T_EOL

    T_EOL  shift, and go to state 42


State 9

    9 block: T_ENDCHOICE .

    $default  reduce using rule 9 (block)


State 10

   74 comment: T_COMMENT . prompt T_EOL

    T_WORD        shift, and go to state 37
    T_WORD_QUOTE  shift, and go to state 38

    prompt  go to state 43


State 11

   17 config_entry_start: T_CONFIG . T_WORD T_EOL

    T_WORD  shift, and go to state 44


State 12

   19 menuconfig_entry_start: T_MENUCONFIG . T_WORD T_EOL

    T_WORD  shift, and go to state 45


State 13

   54 if: T_IF . expr T_EOL

    T_WORD        shift, and go to state 46
    T_WORD_QUOTE  shift, and go to state 47
    T_OPEN_PAREN  shift, and go to state 48
    T_NOT         shift, and go to state 49

    expr    go to state 50
    symbol  go to state 51


State 14

    8 block: T_ENDIF .

    $default  reduce using rule 8 (block)


State 15

   92 nl_or_eof: T_EOF .

    $default  reduce using rule 92 (nl_or_eof)


State 16

   91 nl_or_eof: T_EOL .

    $default  reduce using rule 91 (nl_or_eof)


State 17

    2 input: input block .

    $default  reduce using rule 2 (input)


State 18

    3 block: common_block .

    $default  reduce using rule 3 (block)


State 19

   18 config_stmt: config_entry_start . config_option_list

    $default  reduce using rule 21 (config_option_list)

    config_option_list  go to state 52


State 20

   13 common_block: config_stmt .

    $default  reduce using rule 13 (common_block)


State 21

   20 menuconfig_stmt: menuconfig_entry_start . config_option_list

    $default  reduce using rule 21 (config_option_list)

    config_option_list  go to state 53


State 22

   14 common_block: menuconfig_stmt .

    $default  reduce using rule 14 (common_block)


State 23

   38 choice_entry: choice . choice_option_list

    $default  reduce using rule 42 (choice_option_list)

    choice_option_list  go to state 54


State 24

   40 choice_stmt: choice_entry . choice_block choice_end
   41            | choice_entry . choice_block

    $default  reduce using rule 52 (choice_block)

    choice_block  go to state 55


State 25

    4 block: choice_stmt .

    $default  reduce using rule 4 (block)


State 26

   56 if_stmt: if . if_block if_end
   57        | if . if_block

    $default  reduce using rule 58 (if_block)

    if_block  go to state 56


State 27

   11 common_block: if_stmt .

    $default  reduce using rule 11 (common_block)


State 28

   63 menu_entry: menu . depends_list

    $default  reduce using rule 78 (depends_list)

    depends_list  go to state 57


State 29

   65 menu_stmt: menu_entry . menu_block menu_end
   66          | menu_entry . menu_block

    $default  reduce using rule 67 (menu_block)

    menu_block  go to state 58


State 30

    5 block: menu_stmt .

    $default  reduce using rule 5 (block)


State 31

   73 source_stmt: source .

    $default  reduce using rule 73 (source_stmt)


State 32

   15 common_block: source_stmt .

    $default  reduce using rule 15 (common_block)


State 33

   75 comment_stmt: comment . depends_list

    $default  reduce using rule 78 (depends_list)

    depends_list  go to state 59


State 34

   12 common_block: comment_stmt .

    $default  reduce using rule 12 (common_block)


State 35

   16 common_block: nl_or_eof .

    $default  reduce using rule 16 (common_block)


State 36

   10 block: error nl_or_eof .

    $default  reduce using rule 10 (block)


State 37

   86 prompt: T_WORD .

    $default  reduce using rule 86 (prompt)


State 38

   87 prompt: T_WORD_QUOTE .

    $default  reduce using rule 87 (prompt)


State 39

    6 block: T_MAINMENU prompt . nl_or_eof

    T_EOF  shift, and go to state 15
    T_EOL  shift, and go to state 16

    nl_or_eof  go to state 60


State 40

   62 menu: T_MENU prompt . T_EOL

    T_EOL  shift, and go to state 61


State 41

   72 source: T_SOURCE prompt . T_EOL

    T_EOL  shift, and go to state 62


State 42

   37 choice: T_CHOICE T_EOL .

    $default  reduce using rule 37 (choice)


State 43

   74 comment: T_COMMENT prompt . T_EOL

    T_EOL  shift, and go to state 63


State 44

   17 config_entry_start: T_CONFIG T_WORD . T_EOL

    T_EOL  shift, and go to state 64


State 45

   19 menuconfig_entry_start: T_MENUCONFIG T_WORD . T_EOL

    T_EOL  shift, and go to state 65


State 46

  102 symbol: T_WORD .

    $default  reduce using rule 102 (symbol)


State 47

  103 symbol: T_WORD_QUOTE .

    $default  reduce using rule 103 (symbol)


State 48
